tests/benchmarks/samples/gcc/006_fatal_missing_header.txt
main.c:3:10: fatal error: engine.h: No such file or directory
    3 | #include "engine.h"
      |          ^~~~~~~~~~
compilation terminated.
